--- a/style.css
+++ b/style.css
@@ -1,14 +1,18 @@
 body {
     margin: 0;
     padding: 0;
+    background: rgb(218, 199, 199);
+    color: black;
 }
 
 header {
     width: 100%;
     height: 100vh;
-    background: url(header_bg.webp);
+    background: rgb(199, 199, 199);
     background-size: cover;
     display: flex;
+    left:200px;
+    
 }
 
 .header_left {
